@@ -10,5 +10,5 @@
 *                  postmaster@rudyz.net                                     *
 ****************************************************************************/
 ?>
+<div relid="tabs" ></div>
 <div relid="menu"></div>
-
