@@ -28,9 +28,12 @@ function ryWinz(missing){
         if(o.options==missing){ o.options={} }
         if(s==missing){ s={} }
         //o.options.controls=(s.controls!=missing ? s.controls : true);
-        //o.options.statusbar=(s.statusbar!=missing ? s.controls : true);
+        //o.options.statusbar=(s.statusbar!=missing ? s.statusbar : true);
+        //o.options.desk=(s.desk!=missing ? s.desk : false);
         o.options.controls=false;
         o.options.statusbar=true;
+        o.options.desk=false;
+        o.options.mono=true;
         // EVENTO DI STOP DELLE RICHIESTE
         $("#stop_"+formid).click(
             function(){
